# compressed-strings

./: .gitignore  Build.cpp  CMakeLists.txt  Makefile  README.md  StringDictionary.cpp  StringDictionary.h  StringDictionaryFMINDEX.cpp  StringDictionaryFMINDEX.h  StringDictionaryHHTFC.h  StringDictionaryPFC.cpp  StringDictionaryPFC.h  StringDictionaryRPHTFC.cpp  StringDictionaryRPHTFC.h  Test-single.cpp  Test-substr.cpp  Test.cpp
FMIndex/: SSA.cpp  SSA.h
HuTucker/: HuTucker.cpp  HuTucker.h
Huffman/: Huffman.cpp  Huffman.h  huff.cpp  huff.h
RePair/: RePair.cpp  RePair.h
RePair/Coder/: IRePair.cpp  arrayg.h  hash.cpp  heap.cpp
benchmark/scripts/: build-hhtfc.sh  build-pfc.sh  run-hhtfc.sh  run-pfc.sh
iterators/: IteratorDictString.h  IteratorDictStringFMINDEX.h  IteratorDictStringHHTFC.h  IteratorDictStringPFC.h  IteratorDictStringRPHTFC.h
libcds/: Makefile
libcds/includes/: BitSequenceBuilder.h  libcdsBasics.h
libcds/src/: Makefile
src/FMIndex/: SSA.cpp  SSA.h  SuffixArray.cpp  SuffixArray.h
src/Hash/: Hash.cpp  Hash.h  HashBBdh.cpp  HashBBdh.h  HashBdh.cpp  HashBdh.h  HashDAC.cpp  HashDAC.h  HashUtils.h  Hashdh.cpp  Hashdh.h
src/HuTucker/: HuTucker.cpp  HuTucker.h
src/Huffman/: Huffman.cpp  Huffman.h  huff.cpp  huff.h
src/RePair/: RePair.cpp  RePair.h  RePairA.cpp  RePairA.h
src/XBW/: TrieNode.cpp  TrieNode.h  XBW.cpp  XBW.h
src/dicts/: StringDictionary.cpp  StringDictionary.h  StringDictionaryFMINDEX.cpp  StringDictionaryFMINDEX.h  StringDictionaryHHTFC.cpp  StringDictionaryHHTFC.h  (+4 more)
utils/: Utils.h  VByte.cpp  VByte.h
(+215 files in other folders)
